2009-12-20  Xan Lopez  <xlopez@igalia.com>

        Rubber-stamped by Gustavo Noronha.

        Disable the page cache by default since:

        - It was previously off by default.
        - There are still some issues when enabling it.

        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):

2009-12-20  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Provides a new API to copy WebKitWebHistoryItem objects.

        * webkit/webkitwebhistoryitem.cpp:
        (webkit_web_history_item_copy):
        * webkit/webkitwebhistoryitem.h:

2009-12-20  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Make sure we get the URI that is being loaded when updating
        WebKitWebFrame's knowledge of it. This was causing problems now
        that page cache is enabled.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::dispatchDidCommitLoad):
        * tests/testloading.c:
        (load_goback_status_changed_cb):
        (load_wentback_status_changed_cb):
        (test_loading_goback):
        (main):

2009-12-20  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Cache control APIs
        https://bugs.webkit.org/show_bug.cgi?id=24001

        Original patch by Bobby Powers <bobby@laptop.org>

        Added new API to specify cache models for GTK port.

        * webkit/webkitprivate.cpp:
        (webkit_init): set a default cache model.
        * webkit/webkitwebview.cpp:
        * webkit/webkitwebview.h:
        (webkit_set_cache_model): Added function.
        (webkit_get_cache_model): Added function.

2009-12-20  Xan Lopez  <xlopez@igalia.com>

        Revert the previous patch, it introduces some failures in the
        bots.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::committedLoad):