@@ -44,13 +44,8 @@ InspectorClient::InspectorClient(WebKitWebView* webView)
 
 void InspectorClient::inspectorDestroyed()
 {
-    if (m_webView) {
-        gboolean handled = FALSE;
-        g_signal_emit_by_name(m_webInspector, "destroy", &handled);
-
-        /* we can now dispose our own reference */
+    if (m_webInspector)
         g_object_unref(m_webInspector);
-    }
 
     delete this;
 }
@@ -64,6 +59,7 @@ void InspectorClient::webViewDestroyed()
     // something else, and the inspector will be referenced again,
     // there.
     g_object_unref(m_webInspector);
+    m_webInspector = 0;
 }
 
 Page* InspectorClient::createPage()
